--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
               (s.async = !0),
               document.head.appendChild(s);
           </script>
+
+          <p id="today"></p>
         </div>
 
         <div class="containerInfo">
@@ -2605,7 +2607,7 @@
               <a href="#buttom" id="openModalBtn">Termos de uso</a>
             </li>
 
-            <li>
+            <li class="hiddenApp">
               <h2>Aplicativos</h2>
               <div class="containerFooter__item">
                 <a target="_blank" href="#"
@@ -2621,6 +2623,22 @@
               </div>
             </li>
           </ul>
+
+          <li class="hiddenDektop">
+            <h2>Aplicativos</h2>
+            <div class="containerFooter__item">
+              <a target="_blank" href="#"
+                ><img
+                  src="./src/assets/footer/play-store.png"
+                  alt="app store"
+              /></a>
+              <a target="_blank" href="#"
+                ><img
+                  src="./src/assets/footer/apple-store.png"
+                  alt="app store"
+              /></a>
+            </div>
+          </li>
         </div>
 
         <div class="containerCopyrigth">
@@ -3131,6 +3149,7 @@
     <script src="./src/scripts/faq.js"></script>
     <script src="./src/scripts/toasty.js"></script>
     <script src="./src/scripts/modalTerms.js"></script>
+    <script src="./src/scripts/dataTimeText.js"></script>
     <script src="./src/scripts/moviesCarousel.js"></script>
     <script src="./src/scripts/channelsCarousel.js"></script>
     <script src="./src//scripts/headerCarousel.js"></script>
