--- a/index.html
+++ b/index.html
@@ -1588,6 +1588,8 @@
             <h2>MXQ PRO 4K</h2>
             <p>R$ 280,00</p>
 
+            <p class="info"><span>Diga adeus a sua conta de TV e viva hoje o Futuro da Tecnologia!</span>
+              Você precisa apenas de uma conexão com a internet, sua TV e pronto!</p>
             <a href="#" class="containarPlans__button"
               >Comprar
               <svg
@@ -1603,10 +1605,12 @@
                 ></path></svg
             ></a>
           </div>
-          <img
-            src="./src/assets/containerInfo/tv-box.png"
-            alt="imagem tv box"
-          />
+          <div class="imgBox">
+            <img
+              src="./src/assets/containerInfo/tv-box.png"
+              alt="imagem tv box"
+            />
+          </div>
         </div>
 
         <div class="containerSafety">
