--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
           <a
             target="_blank"
-            href="https://liberandocanais.com/"
+            href="#planos"
             class="containerInfo__button"
           >
             <div>Testar agora</div>
@@ -1590,7 +1590,7 @@
 
             <p class="info"><span>Diga adeus a sua conta de TV e viva hoje o Futuro da Tecnologia!</span>
               Você precisa apenas de uma conexão com a internet, sua TV e pronto!</p>
-            <a href="#" class="containarPlans__button"
+            <a href="#planos" class="containarPlans__button"
               >Comprar
               <svg
                 width="29"
