--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <a href="#duvidas" class="containerButton__buttonLink">Dúvidas</a>
 
-            <a href="#" class="containerItens__buttonLink">Contato</a>
+            <a href="#contato" class="containerItens__buttonLink" id="openModalBtn3">Contato</a>
 
             <a href="#conteudo" class="containerItens__buttonLink">Conteúdo</a>
           </div>
@@ -58,7 +58,7 @@
 
           <a href="#duvidas" class="containerItens__buttonLink">Dúvidas</a>
 
-          <a href="#" class="containerItens__buttonLink">Contato</a>
+          <a href="#contatos" class="containerItens__buttonLink" id="openModalBtn4">Contato</a>
 
           <a href="#conteudo" class="containerItens__buttonLink">Conteudo</a>
         </div>
@@ -1702,6 +1702,23 @@
           </div>
         </div>
 
+        <div class="containerButtonBuy">
+          <a href="#planos" class="containerButtonBuy_button">
+            COMPRAR AGORA
+            <svg
+              width="29"
+              height="28"
+              viewBox="0 0 29 28"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M21.4066 7.72333C21.2882 7.43826 21.0617 7.21172 20.7766 7.09333C20.6363 7.03355 20.4857 7.00184 20.3333 7H8.6666C8.35718 7 8.06043 7.12292 7.84164 7.34171C7.62285 7.5605 7.49993 7.85725 7.49993 8.16667C7.49993 8.47609 7.62285 8.77283 7.84164 8.99162C8.06043 9.21042 8.35718 9.33333 8.6666 9.33333H17.5216L7.83826 19.005C7.72891 19.1135 7.64212 19.2425 7.58289 19.3847C7.52366 19.5268 7.49316 19.6793 7.49316 19.8333C7.49316 19.9873 7.52366 20.1398 7.58289 20.282C7.64212 20.4242 7.72891 20.5532 7.83826 20.6617C7.94672 20.771 8.07575 20.8578 8.21792 20.917C8.36009 20.9763 8.51258 21.0068 8.6666 21.0068C8.82061 21.0068 8.9731 20.9763 9.11527 20.917C9.25744 20.8578 9.38647 20.771 9.49493 20.6617L19.1666 10.9783V19.8333C19.1666 20.1428 19.2895 20.4395 19.5083 20.6583C19.7271 20.8771 20.0238 21 20.3333 21C20.6427 21 20.9394 20.8771 21.1582 20.6583C21.377 20.4395 21.4999 20.1428 21.4999 19.8333V8.16667C21.4981 8.01421 21.4664 7.86359 21.4066 7.72333V7.72333Z"
+                fill="currentColor"
+              ></path></svg
+          ></a>
+        </div>
+
         <div class="containerFaq" id="duvidas">
           <h2>FAQ</h2>
         </div>
@@ -2040,6 +2057,19 @@
               </p>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="myModal3" class="modal">
+      <div class="modal-content3 modalContact">
+        <div class="modal-content__title">
+          <h2>Contatos</h2>
+          <span class="closeBtn3">&times;</span>
+        </div>
+        <div class="scroll">
+          <div class="containerImg"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/479px-WhatsApp.svg.png" alt="whats"> <h2>Numero telefone</h2></div>
+          <div class="containerImg"><img src="https://www.pngmart.com/files/15/Email-Symbol-PNG-Free-Download.png" alt="whats"> <h2>Email</h2></div>
         </div>
       </div>
     </div>
