--- a/index.html
+++ b/index.html
@@ -2068,8 +2068,8 @@
           <span class="closeBtn3">&times;</span>
         </div>
         <div class="scroll">
-          <div class="containerImg"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/479px-WhatsApp.svg.png" alt="whats"> <h2>Numero telefone</h2></div>
-          <div class="containerImg"><img src="https://www.pngmart.com/files/15/Email-Symbol-PNG-Free-Download.png" alt="whats"> <h2>Email</h2></div>
+          <div class="containerImg"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/479px-WhatsApp.svg.png" alt="whats"> <h2>11 97247-0268</h2></div>
+          <div class="containerImg"><img src="https://www.pngmart.com/files/15/Email-Symbol-PNG-Free-Download.png" alt="whats"> <h2>falecom@liberandocanais.com</h2></div>
         </div>
       </div>
     </div>
