--- a/index.html
+++ b/index.html
@@ -495,11 +495,11 @@
               </div>
 
               <div class="containarPlans__price">
-                <h2>Trimestral</h2>
+                
 
                 <p class="oldvalue__title"><Span>De</SPan> <span class="oldValue">R$297,00</span></p>
                 <span>Hoje 12x no Cartão</span>
-                <p class="price">R$ <span>14,76</span></p>
+                <p class="price"><span>14,76</span></p>
 
                 <span style="margin-bottom: 20px;"><span class="cartao">R$ 147,00</span> Á VISTA NO PIX</p></span>
 
@@ -731,11 +731,11 @@
               </div>
 
                <div class="containarPlans__price">
-                <h2>Trimestral</h2>
+                
 
                 <p class="oldvalue__title"><Span>De</SPan> <span class="oldValue">R$297,00</span></p>
                 <span>Hoje 12x no Cartão</span>
-                <p class="price">R$ <span>14,76</span></p>
+                <p class="price"><span>14,76</span></p>
 
                 <span style="margin-bottom: 20px;"><span class="cartao">R$ 147,00</span> Á VISTA NO PIX</p></span>
 
