--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                 <span>Hoje 12x no Cartão</span>
                 <p class="price"><span>14,76</span></p>
 
-                <span style="margin-bottom: 20px;"><span class="cartao">R$ 147,00</span> Á VISTA NO PIX</p></span>
+                <span><span class="cartao">R$ 147,00</span> Á VISTA NO PIX</p></span>
 
                  
                 <a href="" class="containarPlans__button">
