--- a/index.html
+++ b/index.html
@@ -1864,8 +1864,8 @@
               <a target="_blank" href="https://player.liberandocanais.com/"
                 >Web Player</a
               >
-              <a href="#"> Android </a>
-              <a href="#"> iOS </a>
+              <a href="#bottom" id="openModalBtn10"> Android </a>
+              <a href="#bottom" id="openModalBtn11"> iOS </a>
             </li>
 
             <li>
@@ -1877,12 +1877,12 @@
             <li class="hiddenApp">
               <h2>Aplicativos</h2>
               <div class="containerFooter__item">
-                <a target="_blank" href="#"
+                <a  href="#bottom" id="openModalBtn6"
                   ><img
                     src="./src/assets/footer/play-store.png"
                     alt="app store"
                 /></a>
-                <a target="_blank" href="#"
+                <a  href="#bottom" id="openModalBtn7"
                   ><img
                     src="./src/assets/footer/apple-store.png"
                     alt="app store"
@@ -1894,12 +1894,12 @@
           <li class="hiddenDektop">
             <h2>Aplicativos</h2>
             <div class="containerFooter__item">
-              <a target="_blank" href="#"
+              <a href="#bottom" id="openModalBtn8"
                 ><img
                   src="./src/assets/footer/play-store.png"
                   alt="app store"
               /></a>
-              <a target="_blank" href="#"
+              <a href="#bottom" id="openModalBtn9"
                 ><img
                   src="./src/assets/footer/apple-store.png"
                   alt="app store"
@@ -2422,6 +2422,15 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div id="myModal4" class="modal">
+      <div class="modalApp">
+        <p>Você não possui licença ativa</p>
+        <button class="closeBtn4">
+          <p>Fechar</p>
+        </button>
       </div>
     </div>
 
